--- a/web.config
+++ b/web.config
@@ -8,7 +8,7 @@
     </staticContent>
     <defaultDocument>
       <files>
-        <add value="index.html" />
+        <add value="dist/index.html" />
       </files>
     </defaultDocument>
   </system.webServer>
