--- a/.github/workflows/build-game-build_wa-unity.yml
+++ b/.github/workflows/build-game-build_wa-unity.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'Prod'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
       
     steps:
