--- a/.github/workflows/build-game-build_wa-unity.yml
+++ b/.github/workflows/build-game-build_wa-unity.yml
@@ -20,7 +20,12 @@ jobs:
       
       - name: Zip WebGL build folder
         run: Compress-Archive -Path "dist/*" -DestinationPath "build.zip"
-      
+
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-zip
+          path: build.zip
 
   deploy:
     runs-on: windows-latest
@@ -30,11 +35,16 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
       
     steps:
+      - name: Download build artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: build-zip
+
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'WA-Unity'
           slot-name: 'Production'
-          package: .
+          package: build.zip
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
